// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  stroke-dasharray: 126;
  stroke-dashoffset: 60px;
  stroke: #444bc9;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c1 {
  font-size: 20px;
  height: 1em;
  width: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: iVXCSc 0.6s infinite linear;
  animation: iVXCSc 0.6s infinite linear;
}

<div
  class="c0"
  color="primary"
>
  <svg
    class="c1"
    viewBox="22 22 44 44"
  >
    <circle
      class="c2"
      color="primary"
      cx="44"
      cy="44"
      fill="none"
      r="20"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`renders correctly when a color prop is set 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  stroke-dasharray: 126;
  stroke-dashoffset: 60px;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c1 {
  font-size: 20px;
  height: 1em;
  width: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: iVXCSc 0.6s infinite linear;
  animation: iVXCSc 0.6s infinite linear;
}

<div
  class="c0"
  color="red"
  style="color: red;"
>
  <svg
    class="c1"
    viewBox="22 22 44 44"
  >
    <circle
      class="c2"
      color="red"
      cx="44"
      cy="44"
      fill="none"
      r="20"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`renders correctly when a palette prop is set 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  stroke-dasharray: 126;
  stroke-dashoffset: 60px;
  stroke: #444bc9;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c1 {
  font-size: 20px;
  height: 1em;
  width: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: iVXCSc 0.6s infinite linear;
  animation: iVXCSc 0.6s infinite linear;
}

<div
  class="c0"
  color="primary"
>
  <svg
    class="c1"
    viewBox="22 22 44 44"
  >
    <circle
      class="c2"
      color="primary"
      cx="44"
      cy="44"
      fill="none"
      r="20"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`renders correctly when a size prop is set 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  stroke-dasharray: 126;
  stroke-dashoffset: 60px;
  stroke: #444bc9;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c1 {
  font-size: 20px;
  height: 1em;
  width: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: iVXCSc 0.6s infinite linear;
  animation: iVXCSc 0.6s infinite linear;
}

.c1 {
  font-size: 36px;
}

<div
  class="c0"
  color="primary"
>
  <svg
    class="c1"
    viewBox="22 22 44 44"
  >
    <circle
      class="c2"
      color="primary"
      cx="44"
      cy="44"
      fill="none"
      r="20"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`renders correctly when a value prop is set 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  stroke-dasharray: 126;
  stroke-dashoffset: 31.5px;
  stroke: #444bc9;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c1 {
  font-size: 20px;
  height: 1em;
  width: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  class="c0"
  color="primary"
  value="75"
>
  <svg
    class="c1"
    value="75"
    viewBox="22 22 44 44"
  >
    <circle
      class="c2"
      color="primary"
      cx="44"
      cy="44"
      fill="none"
      r="20"
      stroke-width="4"
      value="75"
    />
  </svg>
</div>
`;
